plugins {
    id 'base'
    id 'com.gradleup.shadow' version '8.3.10' apply false
}

group = 'dev.frost'
version = '1.3.1'

ext {
    asmVersion = '9.9.1'
    javafxVersion = '21.0.5'
    junitVersion = '5.10.2'
}

subprojects {
    group = rootProject.group
    version = rootProject.version

    plugins.withType(JavaPlugin).configureEach {
        java {
            toolchain {
                languageVersion = JavaLanguageVersion.of(21)
            }
        }

        tasks.withType(JavaCompile).configureEach {
            options.encoding = 'UTF-8'
            options.release = 21
        }

        tasks.withType(Test).configureEach {
            useJUnitPlatform()
        }

        // Production packaging must not execute verification implicitly. Tests remain
        // available through `test` and `check`, but each module's `build` is assemble-only.
        tasks.named('build').configure {
            setDependsOn([tasks.named('assemble')])
        }
    }
}

tasks.register('cleanAll') {
    group = 'build'
    description = 'Clean all module build directories and root build output'
    dependsOn subprojects.collect { "${it.path}:clean" }
    doLast {
        delete layout.buildDirectory
    }
}

tasks.register('cliShadowJar') {
    group = 'build'
    description = 'Build the runnable CLI jar'
    dependsOn ':frost-cli:shadowJar'
}

tasks.register('guiShadowJar') {
    group = 'build'
    description = 'Build the runnable GUI jar'
    dependsOn ':frost-gui:guiShadowJar'
}

tasks.register('runGui') {
    group = 'application'
    description = 'Build required GUI classes and launch the Frostfuscator desktop GUI'
    dependsOn ':frost-gui:runGui'
}

tasks.register('writeGuiLaunchers') {
    group = 'build'
    description = 'Write GUI launchers beside the GUI jar'
    dependsOn ':frost-gui:writeGuiLaunchers'
}

tasks.named('build') {
    setDependsOn([
            ':frost-cli:shadowJar',
            ':frost-gui:guiShadowJar',
            ':frost-gui:writeGuiLaunchers'
    ])
}
